app/assets/stylesheets/revolution.css.scss
/* ... */
/* Connect Page */

.connect{
  width: 940px; 
 
  .aboutheader{
    padding: 10px;   
  } 
  .aboutbody{
    &>div{ margin-top: 45px; }
    &>div:nth-child(1){ margin-top: 0; }
  
    input{ display: inline-block; float: right; position: relative; top: 4px; }
    h3{ display: inline-block; }
    hr{ margin: 0; }
    
    .connect_accounts{
      text-align: center; 
      font-size: 16px; 
      margin: 20px 0 -25px 0; 
      
      a{ text-decoration: none; margin-left: 4px; }
      img{ display: inline-block; height: 30px; }
    }
  } 
}


/* Challenge Creator */

.question_creator{
  
  h4{ margin-left:46px; font-weight: bold; margin-bottom: 10px; }
  
  .image_upload{
    div{ margin-left: 20px; margin-top:0 !important; display: inline-block; }
  }
}


/* Employer styles */

.green{
  border: 4px solid $employer_green;
  border-radius: 4px;
  background-color: $employer_green_light;
}

.orange{
  border: 4px solid $employer_orange;
  border-radius: 4px;
  background-color: $employer_orange_light;
}

#employer {
  background: $employer_blue;
  
  .aboutbox {
    border-radius: 0;
  }
  .stoney {height: 75px; display: inline; vertical-align: middle; margin-top:-5px;}
  .title { display: inline; vertical-align: middle; font-size:25px; position: relative; bottom: 3px;}
}

/* ^^ Employer styles */


/* Employer Sales Pages */
#employer_landing{
  .aboutheader{
   padding: 15px 0 0 15px;
   
   img{ height: 140px; }
   span{ font-size: 60px; bottom: 52px; } 
  }
  .body{
    
    padding: 26px 16px;
    
    .divider{ 
      border-left: 1px solid rgb(245, 245, 245);
      border-right: 1px solid rgb(209, 209, 209);
      height: 128px;
      width: 0;
      vertical-align: top;
      left: 17px;
      position: relative;
    }
    
    div{ 
      display: inline-block; 
      width: 46%; 
      
      h2{ font-size: 30px; }
      p{ font-size: 16px; line-height: 26px; }
    }    
  } 
}
/* ... */

